<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/movie1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:text="@string/movie1"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ratings1"
        app:layout_constraintEnd_toStartOf="@+id/movie2"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/movie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/movie2"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratings2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie1"
        app:layout_constraintTop_toBottomOf="@+id/movie_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/movie3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/movie3"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ratings3"
        app:layout_constraintEnd_toStartOf="@+id/movie4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_3" />

    <TextView
        android:id="@+id/movie4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/movie4"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratings4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie3"
        app:layout_constraintTop_toBottomOf="@id/movie_4" />

    <ImageView
        android:id="@+id/movie_1"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/movie_1"
        app:layout_constraintBottom_toTopOf="@+id/movie1"
        app:layout_constraintEnd_toStartOf="@id/movie_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878"
        app:srcCompat="@drawable/mad_max" />

    <ImageView
        android:id="@+id/movie_2"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/movie_1"
        app:layout_constraintBottom_toTopOf="@id/movie2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/movie_1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/the_matrix" />

    <ImageView
        android:id="@+id/movie_3"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/movie_3"
        app:layout_constraintBottom_toTopOf="@+id/movie3"
        app:layout_constraintEnd_toStartOf="@+id/movie_4"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratings1"
        app:srcCompat="@drawable/paddington_2" />

    <ImageView
        android:id="@+id/movie_4"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/movie_4"
        app:layout_constraintBottom_toTopOf="@+id/movie4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie_3"
        app:layout_constraintTop_toBottomOf="@+id/ratings2"
        app:layout_constraintVertical_bias="0.294"
        app:srcCompat="@drawable/spiderman_into_the_spiderverse" />

    <TextView
        android:id="@+id/ratings1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ratings_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movie_3"
        app:layout_constraintEnd_toStartOf="@id/ratings2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie1" />

    <TextView
        android:id="@+id/ratings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="10dp"
        android:text="@string/ratings_2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/movie_4"
        app:layout_constraintStart_toEndOf="@id/ratings1"
        app:layout_constraintTop_toBottomOf="@+id/movie2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ratings3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/ratings_3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ratings4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie3" />

    <TextView
        android:id="@+id/ratings4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="10dp"
        android:text="@string/ratings_4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ratings3"
        app:layout_constraintTop_toBottomOf="@id/movie4" />

</androidx.constraintlayout.widget.ConstraintLayout>